version/0.23/_sources/api/solver/_autosummary/settings/clustering_settings.rst.txt
:orphan:

.. _clustering_settings:

clustering_settings
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.clustering_settings.clustering_settings
    :show-inheritance:

.. rubric:: Attributes

==========================================================================   =========================================================

Attribute                                                                                                                      Summary

==========================================================================   =========================================================
:ref:`enable_mesh_interface_clustering <enable_mesh_interface_clustering>`                        Enable clustering on mesh interface.

:ref:`split_angle <split_angle>`                                                  Set split angle for clustering algorithm in degrees.

:ref:`clustering_algorithm <clustering_algorithm>`                                                          Set the cluster algorithm.

:ref:`enable_clustering <enable_clustering>`                                                 Enable/Disable clustering for S2S in GPU.

:ref:`faces_per_cluster <faces_per_cluster>`                                     Settings for determining number of faces per cluster.

==========================================================================   =========================================================

.. rubric:: Methods

====================================================   =============================================================================================================================================

Method                                                                                                                                                                                       Summary

====================================================   =============================================================================================================================================
:ref:`print_thread_clusters <print_thread_clusters>`       Prints the following for all boundary threads: thread-id, number of faces, faces per surface cluster, and the number of surface clusters.

====================================================   =============================================================================================================================================

.. rubric:: Included in:

================   ==========================================================

Parent                                                                Summary

================   ==========================================================
:ref:`s2s <s2s>`       Enable/disable the Surface to Surface radiation model.

================   ==========================================================

